add BusinessLayer && DAL && Models && Mappings

--- a/NewsPaper.Accounts.DAL/NewsPaper.Accounts.DAL.csproj
+++ b/NewsPaper.Accounts.DAL/NewsPaper.Accounts.DAL.csproj
@@ -5,12 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="31.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NewsPaper.Accounts.Models\NewsPaper.Accounts.Models.csproj" />
   </ItemGroup>
 
 </Project>
